﻿- Overhaul logging


Version 0.4 -

- Add map tree replacement
- Add "what's new" update notifictions
- Change wording of building and network replacment buttons ('this' => 'these'), to hopefully make things a bit clearer
- Fix occasional exception when creating building replacment panel


Version 0.3.1 -

- Invert X offset for networks if lane position is negative


Version 0.3 -

- Add tree replacement for networks
- Add rotation and position offsets
- Refresh building and network renders when props/trees replaced and reverted (to ensure LODs and lighting effects are updated).
- Automatically update selected replacement item when target selection changes
- Overhaul individual props vs. grouping behaviour in builiding info panel
- Hotkey now closes info panel if open
- Escape key cancels tool activation
- Add option to remember (and restore!) previous panel position
- Redo network replacement code and data formats
- Redo building replacement code and data formats
- Settings and configuration files renamed (from TreePropReplacer to BOB)
- Rename SelectTool to BOBTool (preparing for UnifiedUI support)


Version 0.2.1 -

- Add rotation adjustment for network props
